src/tpcompil.output
Grammaire

    0 $accept: PROG $end

    1 PROG: DeclConst DeclVarPuisFonct Print

    2 DeclConst: DeclConst CONST ListConst PV
    3          | %empty

    4 $@1: %empty

    5 ListConst: ListConst VRG $@1 IDENT EGAL Litteral

    6 $@2: %empty

    7 $@3: %empty

    8 ListConst: $@2 IDENT $@3 EGAL Litteral

    9 Litteral: NombreSigne
   10         | CARACTERE

   11 NombreSigne: NUM
   12            | ADDSUB NUM

   13 DeclVarPuisFonct: TYPE ListVar PV DeclVarPuisFonct
   14                 | %empty

   15 $@4: %empty

   16 ListVar: ListVar VRG $@4 Ident

   17 $@5: %empty

   18 ListVar: $@5 Ident

   19 Ident: IDENT

   20 Print: %empty
   21      | Print PRINT IDENT PV


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NUM (258) 11 12
CARACTERE (259) 10
TYPE (260) 13
PV (261) 2 13 21
VRG (262) 5 16
CONST (263) 2
IDENT (264) 5 8 19 21
EGAL (265) 5 8
ADDSUB (266) 12
PRINT (267) 21


Non-terminaux, suivis des règles où ils apparaissent

$accept (13)
    à gauche: 0
PROG (14)
    à gauche: 1, à droite: 0
DeclConst (15)
    à gauche: 2 3, à droite: 1 2
ListConst (16)
    à gauche: 5 8, à droite: 2 5
$@1 (17)
    à gauche: 4, à droite: 5
$@2 (18)
    à gauche: 6, à droite: 8
$@3 (19)
    à gauche: 7, à droite: 8
Litteral (20)
    à gauche: 9 10, à droite: 5 8
NombreSigne (21)
    à gauche: 11 12, à droite: 9
DeclVarPuisFonct (22)
    à gauche: 13 14, à droite: 1 13
ListVar (23)
    à gauche: 16 18, à droite: 13 16
$@4 (24)
    à gauche: 15, à droite: 16
$@5 (25)
    à gauche: 17, à droite: 18
Ident (26)
    à gauche: 19, à droite: 16 18
Print (27)
    à gauche: 20 21, à droite: 1 21


État 0

    0 $accept: . PROG $end

    $défaut  réduction par utilisation de la règle 3 (DeclConst)

    PROG       aller à l'état 1
    DeclConst  aller à l'état 2


État 1

    0 $accept: PROG . $end

    $end  décalage et aller à l'état 3


État 2

    1 PROG: DeclConst . DeclVarPuisFonct Print
    2 DeclConst: DeclConst . CONST ListConst PV

    TYPE   décalage et aller à l'état 4
    CONST  décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 14 (DeclVarPuisFonct)

    DeclVarPuisFonct  aller à l'état 6


État 3

    0 $accept: PROG $end .

    $défaut  accepter


État 4

   13 DeclVarPuisFonct: TYPE . ListVar PV DeclVarPuisFonct

    $défaut  réduction par utilisation de la règle 17 ($@5)

    ListVar  aller à l'état 7
    $@5      aller à l'état 8


État 5

    2 DeclConst: DeclConst CONST . ListConst PV

    $défaut  réduction par utilisation de la règle 6 ($@2)

    ListConst  aller à l'état 9
    $@2        aller à l'état 10


État 6

    1 PROG: DeclConst DeclVarPuisFonct . Print

    $défaut  réduction par utilisation de la règle 20 (Print)

    Print  aller à l'état 11


État 7

   13 DeclVarPuisFonct: TYPE ListVar . PV DeclVarPuisFonct
   16 ListVar: ListVar . VRG $@4 Ident

    PV   décalage et aller à l'état 12
    VRG  décalage et aller à l'état 13


État 8

   18 ListVar: $@5 . Ident

    IDENT  décalage et aller à l'état 14

    Ident  aller à l'état 15


État 9

    2 DeclConst: DeclConst CONST ListConst . PV
    5 ListConst: ListConst . VRG $@1 IDENT EGAL Litteral

    PV   décalage et aller à l'état 16
    VRG  décalage et aller à l'état 17


État 10

    8 ListConst: $@2 . IDENT $@3 EGAL Litteral

    IDENT  décalage et aller à l'état 18


État 11

    1 PROG: DeclConst DeclVarPuisFonct Print .
   21 Print: Print . PRINT IDENT PV

    PRINT  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 1 (PROG)


État 12

   13 DeclVarPuisFonct: TYPE ListVar PV . DeclVarPuisFonct

    TYPE  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 14 (DeclVarPuisFonct)

    DeclVarPuisFonct  aller à l'état 20


État 13

   16 ListVar: ListVar VRG . $@4 Ident

    $défaut  réduction par utilisation de la règle 15 ($@4)

    $@4  aller à l'état 21


État 14

   19 Ident: IDENT .

    $défaut  réduction par utilisation de la règle 19 (Ident)


État 15

   18 ListVar: $@5 Ident .

    $défaut  réduction par utilisation de la règle 18 (ListVar)


État 16

    2 DeclConst: DeclConst CONST ListConst PV .

    $défaut  réduction par utilisation de la règle 2 (DeclConst)


État 17

    5 ListConst: ListConst VRG . $@1 IDENT EGAL Litteral

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 22


État 18

    8 ListConst: $@2 IDENT . $@3 EGAL Litteral

    $défaut  réduction par utilisation de la règle 7 ($@3)

    $@3  aller à l'état 23


État 19

   21 Print: Print PRINT . IDENT PV

    IDENT  décalage et aller à l'état 24


État 20

   13 DeclVarPuisFonct: TYPE ListVar PV DeclVarPuisFonct .

    $défaut  réduction par utilisation de la règle 13 (DeclVarPuisFonct)


État 21

   16 ListVar: ListVar VRG $@4 . Ident

    IDENT  décalage et aller à l'état 14

    Ident  aller à l'état 25


État 22

    5 ListConst: ListConst VRG $@1 . IDENT EGAL Litteral

    IDENT  décalage et aller à l'état 26


État 23

    8 ListConst: $@2 IDENT $@3 . EGAL Litteral

    EGAL  décalage et aller à l'état 27


État 24

   21 Print: Print PRINT IDENT . PV

    PV  décalage et aller à l'état 28


État 25

   16 ListVar: ListVar VRG $@4 Ident .

    $défaut  réduction par utilisation de la règle 16 (ListVar)


État 26

    5 ListConst: ListConst VRG $@1 IDENT . EGAL Litteral

    EGAL  décalage et aller à l'état 29


État 27

    8 ListConst: $@2 IDENT $@3 EGAL . Litteral

    NUM        décalage et aller à l'état 30
    CARACTERE  décalage et aller à l'état 31
    ADDSUB     décalage et aller à l'état 32

    Litteral     aller à l'état 33
    NombreSigne  aller à l'état 34


État 28

   21 Print: Print PRINT IDENT PV .

    $défaut  réduction par utilisation de la règle 21 (Print)


État 29

    5 ListConst: ListConst VRG $@1 IDENT EGAL . Litteral

    NUM        décalage et aller à l'état 30
    CARACTERE  décalage et aller à l'état 31
    ADDSUB     décalage et aller à l'état 32

    Litteral     aller à l'état 35
    NombreSigne  aller à l'état 34


État 30

   11 NombreSigne: NUM .

    $défaut  réduction par utilisation de la règle 11 (NombreSigne)


État 31

   10 Litteral: CARACTERE .

    $défaut  réduction par utilisation de la règle 10 (Litteral)


État 32

   12 NombreSigne: ADDSUB . NUM

    NUM  décalage et aller à l'état 36


État 33

    8 ListConst: $@2 IDENT $@3 EGAL Litteral .

    $défaut  réduction par utilisation de la règle 8 (ListConst)


État 34

    9 Litteral: NombreSigne .

    $défaut  réduction par utilisation de la règle 9 (Litteral)


État 35

    5 ListConst: ListConst VRG $@1 IDENT EGAL Litteral .

    $défaut  réduction par utilisation de la règle 5 (ListConst)


État 36

   12 NombreSigne: ADDSUB NUM .

    $défaut  réduction par utilisation de la règle 12 (NombreSigne)
